fix models and auth view

--- a/app/views/auth/new.html.erb
+++ b/app/views/auth/new.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div class="field">
     <%= f.label 'Пароль' %>
-    <%= f.text_field :password_digest, type: :password %>
+    <%= f.text_field :password, type: :password %>
   </div>
   <div class="field">
     <%= f.submit 'Войти' %>
