--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,3 @@
-<%= link_to 'Войти', auth_new_url%>
+<h1>Читательсикй дневник</h1>
+<%= link_to 'Вход', auth_new_url %>
+<%= link_to 'Регистрация', users_new_url %>
