--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,14 @@
+<h1>Привет, <%= @current_user.name %>!</h1>
+
+<%= link_to 'Аккаунт', user_url(@current_user) %>
+<%= link_to 'Добавить книгу',  new_user_book_url(@current_user) %>
+
 <h1> Список книг </h1>
 
 <ul>
   <%- @books.each do |book| %>
     <li>
-      <%= link_to book.title, user_book_url(@current_user, book) %>
+      <%= link_to book.title, user_book_url(book) %>
     </li>
   <% end %>
 </ul>
