--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,7 +8,7 @@
 <ul>
   <%- @books.each do |book| %>
     <li>
-      <%= link_to book.title, user_book_url(book) %>
+      <%= link_to book.title, user_book_url(@current_user, book) %>
     </li>
   <% end %>
 </ul>
