fix routes and authentication

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
-<h1>Читательсикй дневник</h1>
-<%= link_to 'Вход', auth_new_url %>
-<%= link_to 'Регистрация', users_new_url %>
+<h1>Читательский дневник</h1>
+<%= link_to 'Вход', new_auth_url %>
+<%= link_to 'Регистрация', new_user_url %>
