add notes and quotes

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div>
     <%= f.label 'Статус' %>
-    <%= f.select(:score, [['Читаю', 0],['Прочитана', 1],['Брошена', 2]]) %>
+    <%= f.select(:status, [['Читаю', 0],['Прочитана', 1],['Брошена', 2]]) %>
   </div>
   <div>
     <%= f.label 'Дата начала чтения' %>
